Linearizing and deploying with localpacks

--- a/notebooks/0.0-Main-Description.ipynb
+++ b/notebooks/0.0-Main-Description.ipynb
@@ -459,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -493,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -578,7 +578,7 @@
        "max        21.000000      20.000000"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -603,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +715,7 @@
        "max      218.000000    437.00000     20.000000     56.000000     64.000000"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,14 +733,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Our data is distributed around: {'Regions': 31, 'Cities': 760}\n"
+      "Our data is distributed around: {'Regions': 34, 'Cities': 773}\n"
      ]
     }
    ],
@@ -810,6 +810,244 @@
    ],
    "source": [
     "df.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<p style=\"font-family: Arial; font-size:2.75em;color:purple; font-style:bold\"><br>\n",
+    "Linearizing and deploying with localpacks</p><br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from localpacks.data import get_data #"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "get_data is a function, and take the original df and apply all clean decisions defined in this notebook."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_clean= get_data( parse_date = True, clean = True) # calling the fuction"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(17542, 13)"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_clean.shape "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>user_id</th>\n",
+       "      <th>platform</th>\n",
+       "      <th>country_region</th>\n",
+       "      <th>city</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>min_age_range</th>\n",
+       "      <th>max_age_range</th>\n",
+       "      <th>event_1</th>\n",
+       "      <th>event_2</th>\n",
+       "      <th>event_3</th>\n",
+       "      <th>event_4</th>\n",
+       "      <th>event_5</th>\n",
+       "      <th>target_churn_indicator</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>install_time</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2018-07-04 19:24:24</th>\n",
+       "      <td>2ba6f357</td>\n",
+       "      <td>Android</td>\n",
+       "      <td>Santa Cruz</td>\n",
+       "      <td>Río Gallegos</td>\n",
+       "      <td>male</td>\n",
+       "      <td>13</td>\n",
+       "      <td>17</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-06-30 13:41:29</th>\n",
+       "      <td>3cb936c1</td>\n",
+       "      <td>Android</td>\n",
+       "      <td>Corrientes</td>\n",
+       "      <td>Corrientes</td>\n",
+       "      <td>male</td>\n",
+       "      <td>13</td>\n",
+       "      <td>17</td>\n",
+       "      <td>0</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-06-30 16:02:30</th>\n",
+       "      <td>17d88bbc</td>\n",
+       "      <td>Android</td>\n",
+       "      <td>Cordoba</td>\n",
+       "      <td>Villa Carlos Paz</td>\n",
+       "      <td>female</td>\n",
+       "      <td>18</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-07-02 21:08:33</th>\n",
+       "      <td>7baa10b6</td>\n",
+       "      <td>Android</td>\n",
+       "      <td>Buenos Aires</td>\n",
+       "      <td>Don Torcuato</td>\n",
+       "      <td>female</td>\n",
+       "      <td>13</td>\n",
+       "      <td>17</td>\n",
+       "      <td>5</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2018-07-07 04:18:47</th>\n",
+       "      <td>120d379</td>\n",
+       "      <td>Android</td>\n",
+       "      <td>Santiago del Estero</td>\n",
+       "      <td>Santiago del Estero</td>\n",
+       "      <td>female</td>\n",
+       "      <td>13</td>\n",
+       "      <td>17</td>\n",
+       "      <td>8</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                      user_id platform       country_region  \\\n",
+       "install_time                                                  \n",
+       "2018-07-04 19:24:24  2ba6f357  Android           Santa Cruz   \n",
+       "2018-06-30 13:41:29  3cb936c1  Android           Corrientes   \n",
+       "2018-06-30 16:02:30  17d88bbc  Android              Cordoba   \n",
+       "2018-07-02 21:08:33  7baa10b6  Android         Buenos Aires   \n",
+       "2018-07-07 04:18:47   120d379  Android  Santiago del Estero   \n",
+       "\n",
+       "                                    city  gender  min_age_range  \\\n",
+       "install_time                                                      \n",
+       "2018-07-04 19:24:24         Río Gallegos    male             13   \n",
+       "2018-06-30 13:41:29           Corrientes    male             13   \n",
+       "2018-06-30 16:02:30     Villa Carlos Paz  female             18   \n",
+       "2018-07-02 21:08:33         Don Torcuato  female             13   \n",
+       "2018-07-07 04:18:47  Santiago del Estero  female             13   \n",
+       "\n",
+       "                     max_age_range  event_1  event_2  event_3  event_4  \\\n",
+       "install_time                                                             \n",
+       "2018-07-04 19:24:24             17        1        2        0        1   \n",
+       "2018-06-30 13:41:29             17        0        7        0        3   \n",
+       "2018-06-30 16:02:30             20        2        1        0        2   \n",
+       "2018-07-02 21:08:33             17        5        6        0        2   \n",
+       "2018-07-07 04:18:47             17        8       12        0        2   \n",
+       "\n",
+       "                     event_5  target_churn_indicator  \n",
+       "install_time                                          \n",
+       "2018-07-04 19:24:24        1                       0  \n",
+       "2018-06-30 13:41:29        0                       1  \n",
+       "2018-06-30 16:02:30        2                       1  \n",
+       "2018-07-02 21:08:33        5                       0  \n",
+       "2018-07-07 04:18:47        3                       0  "
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
    ]
   }
  ],
