--- a/notebooks/1.1-Gradient-Boosting.ipynb
+++ b/notebooks/1.1-Gradient-Boosting.ipynb
@@ -157,7 +157,8 @@
     }
    ],
    "source": [
-    "plot_feature_importances(gbrt,features_dummies)"
+    "\n",
+    "features_dummies)"
    ]
   },
   {
